--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": ">=5.3.2",
         "imagine/Imagine": "0.5.*",
-        "ticketpark/file-bundle": "0.1",
+        "ticketpark/file-bundle": "~0.2",
         "symfony/dependency-injection": ">=2.3,<2.6-dev",
         "symfony/http-foundation": ">=2.3,<2.6-dev"
     },
