--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "This bundle assists in manipulating images",
     "keywords": ["image", "image manipulation"],
     "license": "MIT",
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "authors": [
         {
             "name": "Ticketpark contributors and others",
@@ -15,9 +15,9 @@
     "require": {
         "php": ">=5.3.2",
         "imagine/Imagine": "0.5.*",
-        "ticketpark/file-bundle": "~0.2",
-        "symfony/dependency-injection": ">=2.3,<2.6-dev",
-        "symfony/http-foundation": ">=2.3,<2.6-dev"
+        "ticketpark/file-bundle": "~0.3",
+        "symfony/dependency-injection": "~2.3",
+        "symfony/http-foundation": "~2.3"
     },
 
     "require-dev": {
